# TeslyukNS_chessdev

./: .doit.db  .flake8  .gitignore  .pydocstyle  CHESS.pot  MANIFEST.in  MIT  Pipfile  README.md  dodo.py  dodo.py~  pyproject.toml  run.sh
chessclub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
chessclub/client/: __main__.py  __main__.py~
chessclub/docs/doctrees/: API.doctree  index.doctree
chessclub/docs/html/: API.html  index.html  py-modindex.html  search.html
chessclub/docs/html/_sources/: API.rst.txt  index.rst.txt
chessclub/figures/: convert.py
chessclub/locales/ru_RU.UTF-8/LC_MESSAGES/: CHESS.mo  CHESS.po
chessclub/server/: __main__.py  __main__.py~
chessclub/tests/unittests/: __main__.py
docs/doctrees/: environment.pickle
docs/html/: .buildinfo  searchindex.js
source/: API.rst~  conf.py  conf.py~  index.rst~
