[project]
name = "chessclub"
description = "Chess Club"
readme = "README.md"
dynamic = ["version"]
authors = [{ name = "Niki and Artyom", email = "aaa@aaa.a" }]
license = "MIT" 

dependencies = [
    "pygame",
    "chess",
]

[project.scripts]
chclient = "chessclub.client:run"
chserver = "chessclub.server:run"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["chessclub*"]
namespaces = true

[tool.setuptools.package-data]
chessclub = [
    "locales/*/*/*.mo",
    "locales/*/*/*.po",
    "figures/*",
    "docs/html/**/*.html",
    "tests/*"
]
